assignment2-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-deployment
  namespace: wiki_ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - name: wiki-pod
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /mnt/data
          name: efs-volume
      - name: log-pod
        image: busybox
        command: ['sh', '-c', 'while true; do echo hello; sleep 10;done']
        volumeMounts:
        - mountPath: /mnt/data
          name: efs-volume
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-pvc
