assignment2-kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-service
  namespace: wiki_ns
spec:
  selector:
    app: wiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
